<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
         android:isScrollContainer="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:orientation="vertical"
                android:padding="@dimen/extra_small_padding">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tiUserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyInputTextStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etUserEmail"
                        style="@style/MyInputEditTextStyle"
                        android:hint="@string/email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:orientation="vertical"
                android:padding="@dimen/extra_small_padding">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tiPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyInputTextStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        style="@style/MyInputEditTextStyle"
                        android:hint="@string/password_hint"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:maxLines="2" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:orientation="vertical"
                android:padding="@dimen/extra_small_padding"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tiConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyInputTextStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etConfirmPassword"
                        style="@style/MyInputEditTextStyle"
                        android:hint="@string/confirm_passowrd_hint"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:maxLines="2" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:orientation="vertical"
                android:padding="@dimen/extra_small_padding">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tiUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyInputTextStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etUserName"
                        style="@style/MyInputEditTextStyle"
                        android:hint="@string/userName"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnNewMembership"
                style="@style/TextBigBtnStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginTop="@dimen/large_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:background="@drawable/button_normal_bg"
                android:text="@string/register" />


        </LinearLayout>

    </ScrollView>
</RelativeLayout>

