<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >


    <RelativeLayout
         android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"
         >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            android:isScrollContainer="false"
            android:layout_above="@+id/rlActions">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:orientation="vertical"
                    android:padding="@dimen/extra_small_padding">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tiUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/MyInputTextStyle"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etUserName"
                            style="@style/MyInputEditTextStyle"
                            android:hint="@string/userName"
                            android:maxLines="1"
                            android:inputType="text"
                            android:imeOptions="actionNext"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>


            </LinearLayout>

        </ScrollView>

        <RelativeLayout
            android:id="@+id/rlActions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/small_margin">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                 android:background="@drawable/button_normal_bg"
                android:text="@string/update"
                android:layout_marginEnd="@dimen/small_margin"
                android:layout_marginStart="@dimen/small_margin"
                style="@style/ButtonStyle"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                 android:background="@drawable/button_red_bg"
                android:text="@string/logout"
                android:layout_marginEnd="@dimen/small_margin"
                android:layout_marginStart="@dimen/small_margin"
                style="@style/ButtonStyle"
                />
        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>
