<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/menu_bg"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:orientation="vertical"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lMapUsers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:gravity="start"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/baseline_home_black_36"
                    android:tint="@android:color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtMapUsers"
                    style="@style/TxtMenuStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:text="@string/menu_map_users" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lUsers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:gravity="start"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/baseline_person_outline_black_36"
                    android:tint="@android:color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtUsers"
                    style="@style/TxtMenuStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:text="@string/menu_users" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:gravity="start"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/baseline_person_outline_black_36"
                    android:tint="@android:color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtProfile"
                    style="@style/TxtMenuStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:text="@string/menu_profile" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start"
                android:id="@+id/lLanguage"
                android:layout_marginTop="@dimen/small_margin"
                >

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgvLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/baseline_language_black_36"
                    android:tint="@android:color/white"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/menu_language"
                    style="@style/TxtMenuStyle"
                    android:layout_marginStart="@dimen/medium_margin" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>